3D view not refreshed immediatelly after pasting key frame in dope sheet window #46321

Closed
opened 2015-09-29 17:47:27 +02:00 by Willi · 10 comments

System Information
Win7/64, Nvidia GTX 750 Ti

Blender Version
2.75a official and Blender-2.76.0-git.4aad17c-AMD64

Short description of error
See title.

Exact steps for others to reproduce the error

  • Open attached file
  • In the dope sheet window at the top, select the key frame for the X location.
  • Copy the key to the clipboard (Ctrl+C).
  • Navigate to frame 10.

Paste (Ctrl+V): The position of the cube is not updated immediatelly in the 3D view. You have to navigate forth and back to refresh it. (minor issue)

KeyframePaste.blend

**System Information** Win7/64, Nvidia GTX 750 Ti **Blender Version** 2.75a official and Blender-2.76.0-git.4aad17c-AMD64 **Short description of error** See title. **Exact steps for others to reproduce the error** - Open attached file - In the dope sheet window at the top, select the key frame for the X location. - Copy the key to the clipboard (Ctrl+C). - Navigate to frame 10. # Paste (Ctrl+V): The position of the cube is not updated immediatelly in the 3D view. You have to navigate forth and back to refresh it. (minor issue) [KeyframePaste.blend](https://archive.blender.org/developer/F240907/KeyframePaste.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @willi-2

Added subscriber: @willi-2
Member

Added subscribers: @JoshuaLeung, @JulianEisel

Added subscribers: @JoshuaLeung, @JulianEisel
Member

@JoshuaLeung, proposing fix:

diff --git a/source/blender/editors/animation/keyframes_general.c b/source/blender/editors/animation/keyframes_general.c
index 3642c07..f0d9c48 100644
--- a/source/blender/editors/animation/keyframes_general.c
+++ b/source/blender/editors/animation/keyframes_general.c
@@ -955,6 +955,7 @@ short paste_animedit_keys(bAnimContext *ac, ListBase *anim_data,
                aci = animcopybuf.first;
                
                paste_animedit_keys_fcurve(fcu, aci, offset, merge_mode, false);
+               ale->update |= ANIM_UPDATE_DEFAULT;
        }
        else {
                /* from selected channels 
@JoshuaLeung, proposing fix: ``` diff --git a/source/blender/editors/animation/keyframes_general.c b/source/blender/editors/animation/keyframes_general.c index 3642c07..f0d9c48 100644 --- a/source/blender/editors/animation/keyframes_general.c +++ b/source/blender/editors/animation/keyframes_general.c @@ -955,6 +955,7 @@ short paste_animedit_keys(bAnimContext *ac, ListBase *anim_data, aci = animcopybuf.first; paste_animedit_keys_fcurve(fcu, aci, offset, merge_mode, false); + ale->update |= ANIM_UPDATE_DEFAULT; } else { /* from selected channels ```
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

Actually, update code seems to come from @ideasman42 (193e77cc67), CCing him too.

Actually, update code seems to come from @ideasman42 (193e77cc67), CCing him too.

Added subscriber: @jml

Added subscriber: @jml

Removed subscriber: @jml

Removed subscriber: @jml

This issue was referenced by 83a94cb3f2

This issue was referenced by 83a94cb3f2b5257a3c78f897d27c931d7ed98dde
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46321
No description provided.