Fix T46321: 3D view not refreshed immediatelly after pasting keyframe in dope sheet (for a single channel)